[package]
name = "pxtone-sys"
description = "Low level bindings to pxtone for Rust"
repository = "https://github.com/PieKing1215/rust-pxtone-sys"
version = "0.2.0"
authors = ["PieKing1215"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pxtone", "audio", "bindings", "parsing"]
categories = ["external-ffi-bindings", "multimedia::audio", "parser-implementations"]
links = "pxtone"
build = "src/build.rs"
edition = "2021"

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.63", default-features = false, features = ["runtime", "which-rustfmt"] }

[dev-dependencies]
cpal = "0.14"